adl-backend/src/test/resources/functional/error/helloworldColl/HelloworldApplication.adl
composite error.helloworldColl.HelloworldApplication 
    extends GenericApplication<Helloworld> {
}